<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#706C6C">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/Btn_tree01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_teachingmode"
            android:text="@string/Btn_tree01"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Btn_tree02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_teachingmode"
            android:text="@string/Btn_tree02"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Btn_tree03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Btn_tree03"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Btn_tree04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Btn_tree04"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Btn_tree05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Btn_tree05"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>
</android.widget.ScrollView>
