<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtViewN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtViewN"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtViewS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtViewS"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtViewD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtViewD"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/Btn_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="掃描藍牙裝置"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/Btn_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Bluetooth_off"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/Btn_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/teach"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Btn_write2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/Btn_write2"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Btn_stopService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="StopService"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:visibility="gone" />

    <ExpandableListView
        android:id="@+id/expandableListView_gatt_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>